# CG-Project

./: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraSystem.cpp  CameraSystem.hpp  Color.cpp  Color.hpp  Entity.hpp  GlutMainLoop.cpp  GlutMainLoop.hpp  LICENSE  MaterialManager.hpp  Model.cpp  Model.hpp  PointLight.cpp  PointLight.hpp  README.md  RotatingCube.c  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderProgramManager.hpp  TextureManager.cpp  TextureManager.hpp  bumpshader.fs  bumpshader.vs  fragmentshader.fs  lightshader.vs  main.cpp  merry.json  merry.mtl  vertexshader.vs
cmake/: FindEigen3.cmake  FindGLM.cmake
scene/: merry.json  merry.mtl
shaders/: bumpshader.fs  bumpshader.vs  lightshader.fs
src/: Camera.cpp  CameraSystem.hpp  GlutMainLoop.cpp  Model.hpp  Scene.cpp  Scene.hpp  ShaderProgram.hpp  ShaderProgramManager.hpp  main.cpp
